kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloud-management
  labels:
    name: cloud-management
    app.kubernetes.io/managed-by: kubectl
